sql/SqlParser.py
# Generated from Sql.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SqlParser ( Parser ):

    grammarFileName = "Sql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'*'", "'='", "'<'", "'<='", "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CREATE", "TABLE", "INDEX", "ON", "INSERT", "INTO", 
                      "VALUES", "SELECT", "FROM", "WHERE", "AND", "UPDATE", 
                      "SET", "DELETE", "INT", "STRING", "BOOL", "TRUE", 
                      "FALSE", "ASTERISK", "EQ", "LT", "LE", "GT", "GE", 
                      "INTEGER_LITERAL", "STRING_LITERAL", "IDENTIFIER", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_createTable = 2
    RULE_columnDef = 3
    RULE_typeName = 4
    RULE_createIndex = 5
    RULE_insert = 6
    RULE_select = 7
    RULE_update = 8
    RULE_assignment = 9
    RULE_delete = 10
    RULE_whereClause = 11
    RULE_condition = 12
    RULE_compareOp = 13
    RULE_colList = 14
    RULE_literalList = 15
    RULE_literal = 16

    ruleNames =  [ "program", "statement", "createTable", "columnDef", "typeName", 
                   "createIndex", "insert", "select", "update", "assignment", 
                   "delete", "whereClause", "condition", "compareOp", "colList", 
                   "literalList", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    CREATE=4
    TABLE=5
    INDEX=6
    ON=7
    INSERT=8
    INTO=9
    VALUES=10
    SELECT=11
    FROM=12
    WHERE=13
    AND=14
    UPDATE=15
    SET=16
    DELETE=17
    INT=18
    STRING=19
    BOOL=20
    TRUE=21
    FALSE=22
    ASTERISK=23
    EQ=24
    LT=25
    LE=26
    GT=27
    GE=28
    INTEGER_LITERAL=29
    STRING_LITERAL=30
    IDENTIFIER=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(SqlParser.StatementContext,0)


        def EOF(self):
            return self.getToken(SqlParser.EOF, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SqlParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.statement()
            self.state = 35
            self.match(SqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createTable(self):
            return self.getTypedRuleContext(SqlParser.CreateTableContext,0)


        def createIndex(self):
            return self.getTypedRuleContext(SqlParser.CreateIndexContext,0)


        def insert(self):
            return self.getTypedRuleContext(SqlParser.InsertContext,0)


        def select(self):
            return self.getTypedRuleContext(SqlParser.SelectContext,0)


        def update(self):
            return self.getTypedRuleContext(SqlParser.UpdateContext,0)


        def delete(self):
            return self.getTypedRuleContext(SqlParser.DeleteContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SqlParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.createTable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.createIndex()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.insert()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 40
                self.select()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self.update()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 42
                self.delete()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateTableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # Token

        def CREATE(self):
            return self.getToken(SqlParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(SqlParser.TABLE, 0)

        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlParser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(SqlParser.ColumnDefContext,i)


        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_createTable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateTable" ):
                listener.enterCreateTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateTable" ):
                listener.exitCreateTable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateTable" ):
                return visitor.visitCreateTable(self)
            else:
                return visitor.visitChildren(self)




    def createTable(self):

        localctx = SqlParser.CreateTableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createTable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(SqlParser.CREATE)
            self.state = 46
            self.match(SqlParser.TABLE)
            self.state = 47
            localctx.tableName = self.match(SqlParser.IDENTIFIER)
            self.state = 48
            self.match(SqlParser.T__0)
            self.state = 49
            self.columnDef()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 50
                self.match(SqlParser.T__1)
                self.state = 51
                self.columnDef()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(SqlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.colName = None # Token
            self.colType = None # TypeNameContext

        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def typeName(self):
            return self.getTypedRuleContext(SqlParser.TypeNameContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_columnDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDef" ):
                listener.enterColumnDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDef" ):
                listener.exitColumnDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDef" ):
                return visitor.visitColumnDef(self)
            else:
                return visitor.visitChildren(self)




    def columnDef(self):

        localctx = SqlParser.ColumnDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_columnDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            localctx.colName = self.match(SqlParser.IDENTIFIER)
            self.state = 60
            localctx.colType = self.typeName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SqlParser.INT, 0)

        def STRING(self):
            return self.getToken(SqlParser.STRING, 0)

        def BOOL(self):
            return self.getToken(SqlParser.BOOL, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_typeName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeName" ):
                listener.enterTypeName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeName" ):
                listener.exitTypeName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = SqlParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1835008) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateIndexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.indexName = None # Token
            self.tableName = None # Token

        def CREATE(self):
            return self.getToken(SqlParser.CREATE, 0)

        def INDEX(self):
            return self.getToken(SqlParser.INDEX, 0)

        def ON(self):
            return self.getToken(SqlParser.ON, 0)

        def colList(self):
            return self.getTypedRuleContext(SqlParser.ColListContext,0)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SqlParser.IDENTIFIER)
            else:
                return self.getToken(SqlParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return SqlParser.RULE_createIndex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateIndex" ):
                listener.enterCreateIndex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateIndex" ):
                listener.exitCreateIndex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateIndex" ):
                return visitor.visitCreateIndex(self)
            else:
                return visitor.visitChildren(self)




    def createIndex(self):

        localctx = SqlParser.CreateIndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_createIndex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SqlParser.CREATE)
            self.state = 65
            self.match(SqlParser.INDEX)
            self.state = 66
            localctx.indexName = self.match(SqlParser.IDENTIFIER)
            self.state = 67
            self.match(SqlParser.ON)
            self.state = 68
            localctx.tableName = self.match(SqlParser.IDENTIFIER)
            self.state = 69
            self.match(SqlParser.T__0)
            self.state = 70
            self.colList()
            self.state = 71
            self.match(SqlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # Token

        def INSERT(self):
            return self.getToken(SqlParser.INSERT, 0)

        def INTO(self):
            return self.getToken(SqlParser.INTO, 0)

        def VALUES(self):
            return self.getToken(SqlParser.VALUES, 0)

        def literalList(self):
            return self.getTypedRuleContext(SqlParser.LiteralListContext,0)


        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_insert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert" ):
                listener.enterInsert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert" ):
                listener.exitInsert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert" ):
                return visitor.visitInsert(self)
            else:
                return visitor.visitChildren(self)




    def insert(self):

        localctx = SqlParser.InsertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_insert)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(SqlParser.INSERT)
            self.state = 74
            self.match(SqlParser.INTO)
            self.state = 75
            localctx.tableName = self.match(SqlParser.IDENTIFIER)
            self.state = 76
            self.match(SqlParser.VALUES)
            self.state = 77
            self.match(SqlParser.T__0)
            self.state = 78
            self.literalList()
            self.state = 79
            self.match(SqlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # Token

        def SELECT(self):
            return self.getToken(SqlParser.SELECT, 0)

        def FROM(self):
            return self.getToken(SqlParser.FROM, 0)

        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def ASTERISK(self):
            return self.getToken(SqlParser.ASTERISK, 0)

        def colList(self):
            return self.getTypedRuleContext(SqlParser.ColListContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SqlParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect" ):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)




    def select(self):

        localctx = SqlParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_select)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SqlParser.SELECT)
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.state = 82
                self.match(SqlParser.ASTERISK)
                pass
            elif token in [31]:
                self.state = 83
                self.colList()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 86
            self.match(SqlParser.FROM)
            self.state = 87
            localctx.tableName = self.match(SqlParser.IDENTIFIER)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 88
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # Token

        def UPDATE(self):
            return self.getToken(SqlParser.UPDATE, 0)

        def SET(self):
            return self.getToken(SqlParser.SET, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(SqlParser.AssignmentContext,i)


        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def whereClause(self):
            return self.getTypedRuleContext(SqlParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdate" ):
                listener.enterUpdate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdate" ):
                listener.exitUpdate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdate" ):
                return visitor.visitUpdate(self)
            else:
                return visitor.visitChildren(self)




    def update(self):

        localctx = SqlParser.UpdateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_update)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SqlParser.UPDATE)
            self.state = 92
            localctx.tableName = self.match(SqlParser.IDENTIFIER)
            self.state = 93
            self.match(SqlParser.SET)
            self.state = 94
            self.assignment()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 95
                self.match(SqlParser.T__1)
                self.state = 96
                self.assignment()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 102
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.colName = None # Token

        def EQ(self):
            return self.getToken(SqlParser.EQ, 0)

        def literal(self):
            return self.getTypedRuleContext(SqlParser.LiteralContext,0)


        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SqlParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            localctx.colName = self.match(SqlParser.IDENTIFIER)
            self.state = 106
            self.match(SqlParser.EQ)
            self.state = 107
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tableName = None # Token

        def DELETE(self):
            return self.getToken(SqlParser.DELETE, 0)

        def FROM(self):
            return self.getToken(SqlParser.FROM, 0)

        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def whereClause(self):
            return self.getTypedRuleContext(SqlParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete" ):
                listener.enterDelete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete" ):
                listener.exitDelete(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete" ):
                return visitor.visitDelete(self)
            else:
                return visitor.visitChildren(self)




    def delete(self):

        localctx = SqlParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_delete)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(SqlParser.DELETE)
            self.state = 110
            self.match(SqlParser.FROM)
            self.state = 111
            localctx.tableName = self.match(SqlParser.IDENTIFIER)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 112
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(SqlParser.WHERE, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlParser.ConditionContext)
            else:
                return self.getTypedRuleContext(SqlParser.ConditionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SqlParser.AND)
            else:
                return self.getToken(SqlParser.AND, i)

        def getRuleIndex(self):
            return SqlParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = SqlParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whereClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(SqlParser.WHERE)
            self.state = 116
            self.condition()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 117
                self.match(SqlParser.AND)
                self.state = 118
                self.condition()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.colName = None # Token
            self.op = None # CompareOpContext

        def literal(self):
            return self.getTypedRuleContext(SqlParser.LiteralContext,0)


        def IDENTIFIER(self):
            return self.getToken(SqlParser.IDENTIFIER, 0)

        def compareOp(self):
            return self.getTypedRuleContext(SqlParser.CompareOpContext,0)


        def getRuleIndex(self):
            return SqlParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = SqlParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            localctx.colName = self.match(SqlParser.IDENTIFIER)
            self.state = 125
            localctx.op = self.compareOp()
            self.state = 126
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompareOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(SqlParser.EQ, 0)

        def LT(self):
            return self.getToken(SqlParser.LT, 0)

        def LE(self):
            return self.getToken(SqlParser.LE, 0)

        def GT(self):
            return self.getToken(SqlParser.GT, 0)

        def GE(self):
            return self.getToken(SqlParser.GE, 0)

        def getRuleIndex(self):
            return SqlParser.RULE_compareOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompareOp" ):
                listener.enterCompareOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompareOp" ):
                listener.exitCompareOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompareOp" ):
                return visitor.visitCompareOp(self)
            else:
                return visitor.visitChildren(self)




    def compareOp(self):

        localctx = SqlParser.CompareOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_compareOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 520093696) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SqlParser.IDENTIFIER)
            else:
                return self.getToken(SqlParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return SqlParser.RULE_colList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColList" ):
                listener.enterColList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColList" ):
                listener.exitColList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColList" ):
                return visitor.visitColList(self)
            else:
                return visitor.visitChildren(self)




    def colList(self):
